--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "@tanstack/react-table": "^8.20.6",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
