--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/material": "^6.2.1",
     "@mui/x-date-pickers": "^7.23.3",
+    "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-table": "^8.20.6",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "sonner": "^1.7.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
